src/org/kernel/camelia/language/CameliaParser.java
// $ANTLR 3.1.1 CameliaParser.g 2015-04-25 18:45:30

  package org.kernel.camelia.language;
  
  import org.kernel.camelia.language.nodes.*;
  import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class CameliaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CLASS", "DEF", "IF", "ELSE", "WHILE", "TRY", "CATCH", "END", "SELF", "NIL", "TRUE", "FALSE", "INTEGER", "FLOAT", "DIGIT", "NUMBER", "STRING", "LOWER", "ID_CHAR", "NAME", "UPPER", "CONSTANT", "SEMICOLON", "COLON", "DOT", "COMMA", "OPEN_PARENT", "CLOSE_PARENT", "AT", "EQ", "LE", "GE", "LT", "GT", "PLUS", "MINUS", "MUL", "DIV", "MOD", "AND", "OR", "NOT", "ASSIGN", "NEWLINE", "COMMENT", "SPACE", "WHITESPACE", "LETTER"
    };
    public static final int CLASS=4;
    public static final int LT=36;
    public static final int DEF=5;
    public static final int WHILE=8;
    public static final int MOD=42;
    public static final int LETTER=51;
    public static final int ID_CHAR=22;
    public static final int FLOAT=17;
    public static final int NOT=45;
    public static final int AND=43;
    public static final int SPACE=49;
    public static final int EOF=-1;
    public static final int IF=6;
    public static final int AT=32;
    public static final int NAME=23;
    public static final int COMMA=29;
    public static final int PLUS=38;
    public static final int DIGIT=18;
    public static final int EQ=33;
    public static final int COMMENT=48;
    public static final int DOT=28;
    public static final int INTEGER=16;
    public static final int GE=35;
    public static final int ELSE=7;
    public static final int NUMBER=19;
    public static final int WHITESPACE=50;
    public static final int SEMICOLON=26;
    public static final int MINUS=39;
    public static final int TRUE=14;
    public static final int MUL=40;
    public static final int TRY=9;
    public static final int COLON=27;
    public static final int NEWLINE=47;
    public static final int NIL=13;
    public static final int OPEN_PARENT=30;
    public static final int OR=44;
    public static final int CLOSE_PARENT=31;
    public static final int ASSIGN=46;
    public static final int CONSTANT=25;
    public static final int GT=37;
    public static final int LOWER=21;
    public static final int DIV=41;
    public static final int CATCH=10;
    public static final int END=11;
    public static final int FALSE=15;
    public static final int SELF=12;
    public static final int LE=34;
    public static final int UPPER=24;
    public static final int STRING=20;

    // delegates
    // delegators


        public CameliaParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CameliaParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CameliaParser.tokenNames; }
    public String getGrammarFileName() { return "CameliaParser.g"; }


      /**
        Run the parsing process and return the root node of the AST.
      */
      public Node parse() throws RecognitionException {
        root_return result = root();
        if (result == null) return null;
        return result.nodes;
      }
      
      // Override to throw exceptions on parse error.
      @Override
      public void reportError(RecognitionException e) {
        throw new RuntimeException(e);
      }


    public static class root_return extends ParserRuleReturnScope {
        public Nodes nodes;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "root"
    // CameliaParser.g:55:1: root returns [Nodes nodes] : ( terminator )? ( expressions )? EOF ;
    public final CameliaParser.root_return root() throws RecognitionException {
        CameliaParser.root_return retval = new CameliaParser.root_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF3=null;
        CameliaParser.terminator_return terminator1 = null;

        CameliaParser.expressions_return expressions2 = null;


        Object EOF3_tree=null;

        try {
            // CameliaParser.g:55:27: ( ( terminator )? ( expressions )? EOF )
            // CameliaParser.g:56:5: ( terminator )? ( expressions )? EOF
            {
            root_0 = (Object)adaptor.nil();

            // CameliaParser.g:56:5: ( terminator )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==SEMICOLON||LA1_0==NEWLINE) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // CameliaParser.g:0:0: terminator
                    {
                    pushFollow(FOLLOW_terminator_in_root77);
                    terminator1=terminator();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, terminator1.getTree());

                    }
                    break;

            }

            // CameliaParser.g:56:17: ( expressions )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=CLASS && LA2_0<=IF)||(LA2_0>=WHILE && LA2_0<=TRY)||(LA2_0>=SELF && LA2_0<=FLOAT)||LA2_0==STRING||LA2_0==NAME||LA2_0==CONSTANT||LA2_0==OPEN_PARENT||LA2_0==AT||LA2_0==NOT) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // CameliaParser.g:0:0: expressions
                    {
                    pushFollow(FOLLOW_expressions_in_root80);
                    expressions2=expressions();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expressions2.getTree());

                    }
                    break;

            }

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_root83); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
               retval.nodes = (expressions2!=null?expressions2.nodes:null); 
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

          catch(RecognitionException recognitionException) {
            throw recognitionException;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end "root"

    public static class expressions_return extends ParserRuleReturnScope {
        public Nodes nodes;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expressions"
    // CameliaParser.g:60:1: expressions returns [Nodes nodes] : head= expression ( terminator tail= expression )* ( terminator )? ;
    public final CameliaParser.expressions_return expressions() throws RecognitionException {
        CameliaParser.expressions_return retval = new CameliaParser.expressions_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        CameliaParser.expression_return head = null;

        CameliaParser.expression_return tail = null;

        CameliaParser.terminator_return terminator4 = null;

        CameliaParser.terminator_return terminator5 = null;



        try {
            // CameliaParser.g:60:34: (head= expression ( terminator tail= expression )* ( terminator )? )
            // CameliaParser.g:61:23: head= expression ( terminator tail= expression )* ( terminator )?
            {
            root_0 = (Object)adaptor.nil();

            if ( state.backtracking==0 ) {
               retval.nodes = new Nodes(); 
            }
            pushFollow(FOLLOW_expression_in_expressions131);
            head=expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, head.getTree());
            if ( state.backtracking==0 ) {
               retval.nodes.add((head!=null?head.node:null)); 
            }
            // CameliaParser.g:63:5: ( terminator tail= expression )*
            loop3:
            do {
                int alt3=2;
                alt3 = dfa3.predict(input);
                switch (alt3) {
            	case 1 :
            	    // CameliaParser.g:63:6: terminator tail= expression
            	    {
            	    pushFollow(FOLLOW_terminator_in_expressions142);
            	    terminator4=terminator();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, terminator4.getTree());
            	    pushFollow(FOLLOW_expression_in_expressions151);
            	    tail=expression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, tail.getTree());
            	    if ( state.backtracking==0 ) {
            	       retval.nodes.add((tail!=null?tail.node:null)); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // CameliaParser.g:66:5: ( terminator )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==SEMICOLON||LA4_0==NEWLINE) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // CameliaParser.g:0:0: terminator
                    {
                    pushFollow(FOLLOW_terminator_in_expressions167);
                    terminator5=terminator();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, terminator5.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

          catch(RecognitionException recognitionException) {
            throw recognitionException;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expressions"

    public static class expression_return extends ParserRuleReturnScope {
        public Node node;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // CameliaParser.g:70:1: expression returns [Node node] : assignExpression ;
    public final CameliaParser.expression_return expression() throws RecognitionException {
        CameliaParser.expression_return retval = new CameliaParser.expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        CameliaParser.assignExpression_return assignExpression6 = null;



        try {
            // CameliaParser.g:70:31: ( assignExpression )
            // CameliaParser.g:71:5: assignExpression
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_assignExpression_in_expression187);
            assignExpression6=assignExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, assignExpression6.getTree());
            if ( state.backtracking==0 ) {
               retval.node = (assignExpression6!=null?assignExpression6.node:null); 
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

          catch(RecognitionException recognitionException) {
            throw recognitionException;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class terminator_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "terminator"
    // CameliaParser.g:75:1: terminator : ( NEWLINE | SEMICOLON )+ ;
    public final CameliaParser.terminator_return terminator() throws RecognitionException {
        CameliaParser.terminator_return retval = new CameliaParser.terminator_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set7=null;

        Object set7_tree=null;

        try {
            // CameliaParser.g:75:11: ( ( NEWLINE | SEMICOLON )+ )
            // CameliaParser.g:75:13: ( NEWLINE | SEMICOLON )+
            {
            root_0 = (Object)adaptor.nil();

            // CameliaParser.g:75:13: ( NEWLINE | SEMICOLON )+
            int cnt5=0;
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==SEMICOLON||LA5_0==NEWLINE) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // CameliaParser.g:
            	    {
            	    set7=(Token)input.LT(1);
            	    if ( input.LA(1)==SEMICOLON||input.LA(1)==NEWLINE ) {
            	        input.consume();
            	        if ( state.backtracking==0 ) adaptor.addChild(root_0, (Object)adaptor.create(set7));
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt5 >= 1 ) break loop5;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(5, input);
                        throw eee;
                }
                cnt5++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

          catch(RecognitionException recognitionException) {
            throw recognitionException;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end "terminator"

    public static class assignExpression_return extends ParserRuleReturnScope {
        public Node node;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "assignExpression"
    // CameliaParser.g:81:1: assignExpression returns [Node node] : ( assign | e= orExpression );
    public final CameliaParser.assignExpression_return assignExpression() throws RecognitionException {
        CameliaParser.assignExpression_return retval = new CameliaParser.assignExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        CameliaParser.orExpression_return e = null;

        CameliaParser.assign_return assign8 = null;



        try {
            // CameliaParser.g:81:37: ( assign | e= orExpression )
            int alt6=2;
            switch ( input.LA(1) ) {
            case NAME:
                {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==ASSIGN) ) {
                    alt6=1;
                }
                else if ( (LA6_1==EOF||LA6_1==ELSE||(LA6_1>=CATCH && LA6_1<=END)||LA6_1==SEMICOLON||(LA6_1>=DOT && LA6_1<=CLOSE_PARENT)||(LA6_1>=EQ && LA6_1<=OR)||LA6_1==NEWLINE) ) {
                    alt6=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;
                }
                }
                break;
            case CONSTANT:
                {
                int LA6_2 = input.LA(2);

                if ( (LA6_2==ASSIGN) ) {
                    alt6=1;
                }
                else if ( (LA6_2==EOF||LA6_2==ELSE||(LA6_2>=CATCH && LA6_2<=END)||LA6_2==SEMICOLON||(LA6_2>=DOT && LA6_2<=COMMA)||LA6_2==CLOSE_PARENT||(LA6_2>=EQ && LA6_2<=OR)||LA6_2==NEWLINE) ) {
                    alt6=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 2, input);

                    throw nvae;
                }
                }
                break;
            case AT:
                {
                int LA6_3 = input.LA(2);

                if ( (LA6_3==NAME) ) {
                    int LA6_6 = input.LA(3);

                    if ( (LA6_6==ASSIGN) ) {
                        alt6=1;
                    }
                    else if ( (LA6_6==EOF||LA6_6==ELSE||(LA6_6>=CATCH && LA6_6<=END)||LA6_6==SEMICOLON||(LA6_6>=DOT && LA6_6<=COMMA)||LA6_6==CLOSE_PARENT||(LA6_6>=EQ && LA6_6<=OR)||LA6_6==NEWLINE) ) {
                        alt6=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 6, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 3, input);

                    throw nvae;
                }
                }
                break;
            case CLASS:
            case DEF:
            case IF:
            case WHILE:
            case TRY:
            case SELF:
            case NIL:
            case TRUE:
            case FALSE:
            case INTEGER:
            case FLOAT:
            case STRING:
            case OPEN_PARENT:
            case NOT:
                {
                alt6=2;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }

            switch (alt6) {
                case 1 :
                    // CameliaParser.g:82:5: assign
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assign_in_assignExpression231);
                    assign8=assign();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assign8.getTree());
                    if ( state.backtracking==0 ) {
                       retval.node = (assign8!=null?assign8.node:null); 
                    }

                    }
                    break;
                case 2 :
                    // CameliaParser.g:83:5: e= orExpression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_orExpression_in_assignExpression256);
                    e=orExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, e.getTree());
                    if ( state.backtracking==0 ) {
                       retval.node = (e!=null?e.node:null); 
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

          catch(RecognitionException recognitionException) {
            throw recognitionException;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end "assignExpression"

    public static class orExpression_return extends ParserRuleReturnScope {
        public Node node;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "orExpression"
    // CameliaParser.g:86:1: orExpression returns [Node node] : (receiver= andExpression OR arg= orExpression | e= andExpression );
    public final CameliaParser.orExpression_return orExpression() throws RecognitionException {
        CameliaParser.orExpression_return retval = new CameliaParser.orExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token OR9=null;
        CameliaParser.andExpression_return receiver = null;

        CameliaParser.orExpression_return arg = null;

        CameliaParser.andExpression_return e = null;


        Object OR9_tree=null;

        try {
            // CameliaParser.g:86:33: (receiver= andExpression OR arg= orExpression | e= andExpression )
            int alt7=2;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // CameliaParser.g:87:5: receiver= andExpression OR arg= orExpression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_andExpression_in_orExpression285);
                    receiver=andExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, receiver.getTree());
                    OR9=(Token)match(input,OR,FOLLOW_OR_in_orExpression293); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    OR9_tree = (Object)adaptor.create(OR9);
                    adaptor.addChild(root_0, OR9_tree);
                    }
                    pushFollow(FOLLOW_orExpression_in_orExpression297);
                    arg=orExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, arg.getTree());
                    if ( state.backtracking==0 ) {
                       retval.node = new OrNode((receiver!=null?receiver.node:null), (arg!=null?arg.node:null)); 
                    }

                    }
                    break;
                case 2 :
                    // CameliaParser.g:89:5: e= andExpression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_andExpression_in_orExpression313);
                    e=andExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, e.getTree());
                    if ( state.backtracking==0 ) {
                       retval.node = (e!=null?e.node:null); 
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

          catch(RecognitionException recognitionException) {
            throw recognitionException;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end "orExpression"

    public static class andExpression_return extends ParserRuleReturnScope {
        public Node node;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "andExpression"
    // CameliaParser.g:92:1: andExpression returns [Node node] : (receiver= relationalExpression AND arg= andExpression | e= relationalExpression );
    public final CameliaParser.andExpression_return andExpression() throws RecognitionException {
        CameliaParser.andExpression_return retval = new CameliaParser.andExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AND10=null;
        CameliaParser.relationalExpression_return receiver = null;

        CameliaParser.andExpression_return arg = null;

        CameliaParser.relationalExpression_return e = null;


        Object AND10_tree=null;

        try {
            // CameliaParser.g:92:34: (receiver= relationalExpression AND arg= andExpression | e= relationalExpression )
            int alt8=2;
            alt8 = dfa8.predict(input);
            switch (alt8) {
                case 1 :
                    // CameliaParser.g:93:5: receiver= relationalExpression AND arg= andExpression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_relationalExpression_in_andExpression347);
                    receiver=relationalExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, receiver.getTree());
                    AND10=(Token)match(input,AND,FOLLOW_AND_in_andExpression355); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    AND10_tree = (Object)adaptor.create(AND10);
                    adaptor.addChild(root_0, AND10_tree);
                    }
                    pushFollow(FOLLOW_andExpression_in_andExpression359);
                    arg=andExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, arg.getTree());
                    if ( state.backtracking==0 ) {
                       retval.node = new AndNode((receiver!=null?receiver.node:null), (arg!=null?arg.node:null)); 
                    }

                    }
                    break;
                case 2 :
                    // CameliaParser.g:95:5: e= relationalExpression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_relationalExpression_in_andExpression373);
                    e=relationalExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, e.getTree());
                    if ( state.backtracking==0 ) {
                       retval.node = (e!=null?e.node:null); 
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

          catch(RecognitionException recognitionException) {
            throw recognitionException;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end "andExpression"

    public static class relationalExpression_return extends ParserRuleReturnScope {
        public Node node;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "relationalExpression"
    // CameliaParser.g:98:1: relationalExpression returns [Node node] : (receiver= additiveExpression op= ( EQ | LE | GE | LT | GT ) arg= relationalExpression | e= additiveExpression );
    public final CameliaParser.relationalExpression_return relationalExpression() throws RecognitionException {
        CameliaParser.relationalExpression_return retval = new CameliaParser.relationalExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token op=null;
        CameliaParser.additiveExpression_return receiver = null;

        CameliaParser.relationalExpression_return arg = null;

        CameliaParser.additiveExpression_return e = null;


        Object op_tree=null;

        try {
            // CameliaParser.g:98:41: (receiver= additiveExpression op= ( EQ | LE | GE | LT | GT ) arg= relationalExpression | e= additiveExpression )
            int alt9=2;
            alt9 = dfa9.predict(input);
            switch (alt9) {
                case 1 :
                    // CameliaParser.g:99:5: receiver= additiveExpression op= ( EQ | LE | GE | LT | GT ) arg= relationalExpression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_additiveExpression_in_relationalExpression400);
                    receiver=additiveExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, receiver.getTree());
                    op=(Token)input.LT(1);
                    if ( (input.LA(1)>=EQ && input.LA(1)<=GT) ) {
                        input.consume();
                        if ( state.backtracking==0 ) adaptor.addChild(root_0, (Object)adaptor.create(op));
                        state.errorRecovery=false;state.failed=false;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_relationalExpression_in_relationalExpression430);
                    arg=relationalExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, arg.getTree());
                    if ( state.backtracking==0 ) {
                       retval.node = new CallNode((op!=null?op.getText():null), (receiver!=null?receiver.node:null), (arg!=null?arg.node:null)); 
                    }
